--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "nextjs-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,17 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.1.0",
+    "fibers": "^3.1.1",
+    "node-sass": "^4.13.1",
+    "postcss": "^8.2.1",
+    "postcss-preset-env": "^6.7.0",
+    "sass": "^1.30.0",
+    "tailwindcss": "^2.0.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.2.1"
   }
 }
